--- a/Viktor.html
+++ b/Viktor.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-   <title>Vad händer??</title>
+   <title>Joakim är bäst!</title>
 </head>
 <body>
-<h1>Inte mycket :)</h1>
+<h1>IDet är han verkligen!</h1>
 </body>
 </html>
