--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <title>For Sale!</title>
 </head>
 <body>
-</body>body>For Sale</html>h1>
+</body>For Sale</html>
     <h1>For Sale!</h1>
 </body>
 </html>
